<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/NavPage"
    tools:context="android.leo.electricity.wxapi.WXEntryActivity">

    <TextView
        android:id="@+id/result_tv"
        style="@style/TitleText"
        android:text="@string/enter"/>

    <Button
        android:id="@+id/reg_btn"
        style="@style/MMLineActionButton"
        android:layout_margin="10dp"
        android:text="@string/reg"/>

    <Button
        android:id="@+id/goto_send_btn"
        style="@style/MMLineActionButton"
        android:layout_margin="10dp"
        android:text="@string/goto_send"/>

    <Button
        android:id="@+id/goto_pay_btn"
        style="@style/MMLineActionButton"
        android:layout_margin="10dp"
        android:text="@string/goto_pay"/>
    <Button
        android:id="@+id/goto_fav_btn"
        style="@style/MMLineActionButton"
        android:layout_margin="10dp"
        android:text="@string/goto_fav"/>

    <Button
        android:id="@+id/launch_wx_btn"
        style="@style/MMLineActionButton"
        android:layout_margin="10dp"
        android:text="@string/launch_wx"/>

    <Button
        android:id="@+id/check_timeline_supported_btn"
        style="@style/MMLineActionButton"
        android:layout_margin="10dp"
        android:text="@string/check_timeline_supported"/>

</LinearLayout>
